tests/dataset/tpc-ds/compiler/go/q43.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq43288285215/001/main.go:389:2: syntax error: unexpected name at64 after top level declaration
